--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    buildToolsVersion '23.0.0'
 
     defaultConfig {
         applicationId "cxm.simpletools"
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
     }
@@ -18,23 +18,24 @@ android {
         }
     }
 
-    productFlavors {
-
-        wandoujia {}
-        baidu {}
-        c360 {}
-        uc {}
-
-        productFlavors.all { flavor ->
-            flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
-        }
-
-    }
+//    productFlavors {
+//
+//        wandoujia {}
+//        baidu {}
+//        c360 {}
+//        uc {}
+//
+//        productFlavors.all { flavor ->
+//            flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
+//        }
+//
+//    }
 }
 
 
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.0'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile 'com.jiechic.library:xUtils:2.6.14'
+    compile 'com.android.support:appcompat-v7:23.0.1'
 }
