--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".ui.DreamActivity"/>
         <activity android:name=".ui.MatrixActivity"/>
         <activity android:name=".ui.MultiCricleActivity"/>
+        <activity android:name=".ui.WaterActivity"/>
 
         <!--<meta-data-->
             <!--android:name="UMENG_CHANNEL"-->
