--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,8 @@
         <activity android:name=".ui.PageTurnActivity"/>
         <activity android:name=".ui.FolderActivity"/>
         <activity android:name=".ui.TestCanvasActivity"/>
+        <activity android:name=".ui.IconMeasureActivity"/>
+        <activity android:name=".ui.AnimoTestActivity"/>
 
         <!--<meta-data-->
             <!--android:name="UMENG_CHANNEL"-->
