--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity android:name=".ui.TestCanvasActivity"/>
         <activity android:name=".ui.IconMeasureActivity"/>
         <activity android:name=".ui.AnimoTestActivity"/>
+        <activity android:name=".ui.QQHeadSelectActivity"/>
+        <activity android:name=".ui.PotorActivity"/>
 
         <!--<meta-data-->
             <!--android:name="UMENG_CHANNEL"-->
